[package]
name = "rustovers"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-config = "0.9.0"
aws-sdk-ec2 = "0.9.0"
clap = { version = "3.0", features = ["derive"] }
futures = "0.3"
tokio = { version = "1", features = ["full"] }
